--- a/midas15_hf_analysis_v1.Rmd
+++ b/midas15_hf_analysis_v1.Rmd
@@ -38,6 +38,9 @@ case <- case[, -1]
 # Make age per 10 year
 case$decade <- floor(case$AGE/10)
 
+# Discharge year as numeric
+case$DSCYR <- as.numeric(case$DSCYR)
+
 # Load hospital characteristics and merge
 # Source: Georgia's Dakota project
 dthosp <- fread("data/NJ HOSPITALS_Heart Attack Scores 2017.csv")
@@ -190,7 +193,25 @@ print(p0)
 t2$years <- t2$Year - 2000
 m1 <- lm(Counts ~ years,
          data = t2)
-summary(m1)
+
+s1 <-summary(m1)
+
+out1 <- data.table(Outcome = "New HF Admissions",
+                   Slope = s1$coefficients[-1, 1],
+                   `95% C.I.L.B.` = s1$coefficients[-1, 1] - 1.96*s1$coefficients[-1, 2],
+                   `95% C.I.U.B.` = s1$coefficients[-1, 1] + 1.96*s1$coefficients[-1, 2],
+                   `p-Value` = ifelse(s1$coefficients[-1, 4] >= 0.001,
+                                 round(s1$coefficients[-1, 4], 3),
+                                 "<0.001"),
+                   Significance = ifelse(s1$coefficients[-1, 4] <= 0.05,
+                                 ifelse(s1$coefficients[-1, 4] <= 0.01,
+                                        "**",
+                                        "*"), ""))
+datatable(out1) %>%
+  formatCurrency(columns = 2:4, 
+               currency = "",
+               digits = 1,
+               mark = ",")
 ```
 
 # Breakpoint model for number of first HF admissions
@@ -223,7 +244,7 @@ m1.1
 s1.1 <- summary(m1.1)
 s1.1
 
-out <- data.table(bp = round(2000 + m1.1$psi[2], 1),
+out.p <- data.table(bp = round(2000 + m1.1$psi[2], 1),
                   bplb = round(2000 + confint(m1.1)[2], 1),
                   bpub = round(2000 + confint(m1.1)[3], 1),
                   slope1 = round(s1.1$coefficients[2, 1], 1),
@@ -262,159 +283,11 @@ p1 <- ggplot(t2,
 p1
 ```
 
-The breakpoint was estimated to be at the year `r out$bp` (95% C.I.  = `r out$bplb` to `r out$bpub`). The number of new HF patients dicreased significantly between the years 2000 and 2006 by `r -out$slope1` patients on average (95% C.I. = `r out$s1lb` to `r out$s1ub`, p-value < 0.001), and remained almost unchanged from 2007 onward.      
+The breakpoint was estimated to be at the year `r out.p$bp` (95% C.I.  = `r out.p$bplb` to `r out.p$bpub`). The number of new HF patients dicreased significantly between the years 2000 and 2006 by `r -out.p$slope1` patients on average (95% C.I. = `r out.p$s1lb` to `r out.p$s1ub`, p-value < 0.001), and remained almost unchanged from 2007 onward.   
 
-# Demographics 
-```{r demog}
+```{r case_2000_2014_only}
 case <- case[DSCYR > 1999 & DSCYR < 2015, ]
-
-# Pubication/Table1: Demographics----
-# summary(case)
-table1 <- data.table(Description = c("Mean Age at First AMI Admission +/- S.D",
-                                     "Female (%)",
-                                     "Race (%)",
-                                     "* White",
-                                     "* Black",
-                                     "* Other",
-                                     "Ethnicity (%)",
-                                     "* Hispanic",
-                                     "* Non-hispanic",
-                                     "* Unknown",
-                                     "Insurance(%)",
-                                     "* Commercial",
-                                     "* Medicare",
-                                     "* Medicaid/Self-Pay/Other",
-                                     "Admission Hospital Type (%)",
-                                     "* Teaching",
-                                     "* Non-Teaching",
-                                     "* Unknown",
-                                     "Admission to Hospital Area (%)",
-                                     "* Urban",
-                                     "* Inner city",
-                                     "* Rural",
-                                     "* Suburb",
-                                     "* Unknown",
-                                     "Admission Hospital Cath Lab",
-                                     "* Cath Lab",
-                                     "* No Cath Lab",
-                                     "* Unknown",
-                                     "Number of HF Patients"),
-                     `Number of Patients` = c(paste(round(mean(case$AGE), 1),
-                                                    "+/-",
-                                                    round(sd(case$AGE), 1),
-                                                    sep = ""),
-                                              format(sum(case$SEX == "F"),
-                                                     big.mark = ","),
-                                              "",
-                                              format(sum(case$RACE == "White"),
-                                                     big.mark = ","),
-                                              format(sum(case$RACE == "Black"),
-                                                     big.mark = ","),
-                                              format(sum(case$RACE == "Other"),
-                                                     big.mark = ","),
-                                              "",
-                                              format(sum(case$HISPAN == "Hispanic"),
-                                                     big.mark = ","),
-                                              format(sum(case$HISPAN == "Non-Hispanic"),
-                                                     big.mark = ","),
-                                              format(sum(case$HISPAN == "Unknown"),
-                                                     big.mark = ","),
-                                              "",
-                                              format(sum(case$PRIME == "COMMERCIAL"),
-                                                     big.mark = ","),
-                                              format(sum(case$PRIME == "medicare"),
-                                                     big.mark = ","),
-                                              format(sum(case$PRIME == "medicaid/self-pay/other"),
-                                                     big.mark = ","),
-                                              "",
-                                              format(sum(case$Teach == "Teaching"),
-                                                     big.mark = ","),
-                                              format(sum(case$Teach == "Non-Teaching"),
-                                                     big.mark = ","),
-                                              format(sum(case$Teach == "Unknown"),
-                                                     big.mark = ","),
-                                              "",
-                                              format(sum(case$Area == "Urban"),
-                                                     big.mark = ","),
-                                              format(sum(case$Area == "Inner city"),
-                                                     big.mark = ","),
-                                              format(sum(case$Area == "Rural"),
-                                                     big.mark = ","),
-                                              format(sum(case$Area == "Suburb"),
-                                                     big.mark = ","),
-                                              format(sum(case$Area == "Unknown"),
-                                                     big.mark = ","),
-                                              "",
-                                              format(sum(case$CLAB == "Cath Lab"),
-                                                     big.mark = ","),
-                                              format(sum(case$CLAB == "No Cath Lab"),
-                                                     big.mark = ","),
-                                              format(sum(case$CLAB == "Unknown"),
-                                                     big.mark = ","),
-                                              format(nrow(case),
-                                                     big.mark = ",")),
-                     `Percent Patients` = c("",
-                                            round(100*sum(case$SEX == "F")/nrow(case),
-                                                  1),
-                                            "",
-                                            round(100*sum(case$RACE == "White")/nrow(case),
-                                                  1),
-                                            round(100*sum(case$RACE == "Black")/nrow(case),
-                                                  1),
-                                            round(100*sum(case$RACE == "Other")/nrow(case),
-                                                  1),
-                                            "",
-                                            round(100*sum(case$HISPAN == "Hispanic")/nrow(case), 
-                                                  1),
-                                            round(100*sum(case$HISPAN == "Non-Hispanic")/nrow(case), 
-                                                  1),
-                                            round(100*sum(case$HISPAN == "Unknown")/nrow(case), 
-                                                  1),
-                                            "",
-                                            round(100*sum(case$PRIME == "COMMERCIAL")/nrow(case), 
-                                                  1),
-                                            round(100*sum(case$PRIME == "medicare")/nrow(case), 
-                                                  1),
-                                            round(100*sum(case$PRIME == "medicaid/self-pay/other")/nrow(case), 
-                                                  1),
-                                            "",
-                                            round(100*sum(case$Teach == "Teaching")/nrow(case), 
-                                                  1),
-                                            round(100*sum(case$Teach == "Non-Teaching")/nrow(case), 
-                                                  1),
-                                            round(100*sum(case$Teach == "Unknown")/nrow(case), 
-                                                  1),
-                                            "",
-                                            round(100*sum(case$Area == "Urban")/nrow(case), 
-                                                  1), 
-                                            round(100*sum(case$Area == "Inner city")/nrow(case), 
-                                                  1), 
-                                            round(100*sum(case$Area == "Rural")/nrow(case), 
-                                                  1), 
-                                            round(100*sum(case$Area == "Suburb")/nrow(case), 
-                                                  1),
-                                            round(100*sum(case$Area == "Unknown")/nrow(case), 
-                                                  1), 
-                                            "",
-                                            round(100*sum(case$CLAB == "Cath Lab")/nrow(case), 
-                                                  1),
-                                            round(100*sum(case$CLAB == "No Cath Lab")/nrow(case), 
-                                                  1),
-                                            round(100*sum(case$CLAB == "Unknown")/nrow(case), 
-                                                  1),
-                                            ""))
-
-# Save Table1 as CSV
-write.csv(table1,
-          file = "tmp/table1.csv")
-
-datatable(table1,
-          caption = "Table 2: HF pateints' characteristics",
-          rownames = FALSE,
-          class = "cell-border stripe",
-          options = list(searching = TRUE,
-                         pageLength = nrow(table1)))
-```  
+```
 
 # Rates of outcomes
 ## All-Cause Readmissions
@@ -767,7 +640,7 @@ graphics.off()
 print(p1)
 ```
 
-## Outcome rate linear trends
+## Linear trends of 1-year outcomes
 ```{r rates_1y_trends}
 out <- list()
 for (i in 1:length(t1.apx)) {
@@ -775,18 +648,278 @@ for (i in 1:length(t1.apx)) {
   tmp$year <- as.numeric(as.character(tmp$`HF Discharge Year`)) - 2000 
   m1 <- lm(`1-Year` ~ year,
            data = tmp)
-  out[[i]] <- summary(m1)
+  s1 <- summary(m1)
+  out[[i]] <- data.table(Outcome = names(t1.apx)[[i]],
+                         Slope = s1$coefficients[-1, 1],
+                         `95% C.I.L.B.` = s1$coefficients[-1, 1] - 1.96*s1$coefficients[-1, 2],
+                         `95% C.I.U.B.` = s1$coefficients[-1, 1] + 1.96*s1$coefficients[-1, 2],
+                         `p-Value` = ifelse(s1$coefficients[-1, 4] >= 0.001,
+                                            round(s1$coefficients[-1, 4], 3),
+                                            "<0.001"),
+                         Significance = ifelse(s1$coefficients[-1, 4] <= 0.05,
+                                               ifelse(s1$coefficients[-1, 4] <= 0.01,
+                                                      "**",
+                                                      "*"), ""))
 }
-names(out) <- names(t1.apx)
-out
+out <- rbindlist(out)
+
+datatable(data = out,
+          caption = "Table: Linear Trends of 1-Year Outcomes",
+          class = "cell-border stripe",
+          rownames = FALSE,
+          options = list(searching = TRUE,
+                         pageLength = nrow(out))) %>%
+  formatRound(columns = 2:4,
+              digits = 3)
+```
+
+# Demographics 
+```{r demog}
+# Pubication/Table1: Demographics----
+# summary(case)
+table1 <- data.table(Description = c("Mean Age at First AMI Admission +/- S.D",
+                                     "Female (%)",
+                                     "Race (%)",
+                                     "* White",
+                                     "* Black",
+                                     "* Other",
+                                     "Ethnicity (%)",
+                                     "* Hispanic",
+                                     "* Non-hispanic",
+                                     "* Unknown",
+                                     "Insurance(%)",
+                                     "* Commercial",
+                                     "* Medicare",
+                                     "* Medicaid/Self-Pay/Other",
+                                     "Admission Hospital Type (%)",
+                                     "* Teaching",
+                                     "* Non-Teaching",
+                                     "* Unknown",
+                                     "Admission to Hospital Area (%)",
+                                     "* Urban",
+                                     "* Inner city",
+                                     "* Rural",
+                                     "* Suburb",
+                                     "* Unknown",
+                                     "Admission Hospital Cath Lab",
+                                     "* Cath Lab",
+                                     "* No Cath Lab",
+                                     "* Unknown",
+                                     "Number of HF Patients"),
+                     `Number of Patients` = c(paste(round(mean(case$AGE), 1),
+                                                    "+/-",
+                                                    round(sd(case$AGE), 1),
+                                                    sep = ""),
+                                              format(sum(case$SEX == "F"),
+                                                     big.mark = ","),
+                                              "",
+                                              format(sum(case$RACE == "White"),
+                                                     big.mark = ","),
+                                              format(sum(case$RACE == "Black"),
+                                                     big.mark = ","),
+                                              format(sum(case$RACE == "Other"),
+                                                     big.mark = ","),
+                                              "",
+                                              format(sum(case$HISPAN == "Hispanic"),
+                                                     big.mark = ","),
+                                              format(sum(case$HISPAN == "Non-Hispanic"),
+                                                     big.mark = ","),
+                                              format(sum(case$HISPAN == "Unknown"),
+                                                     big.mark = ","),
+                                              "",
+                                              format(sum(case$PRIME == "COMMERCIAL"),
+                                                     big.mark = ","),
+                                              format(sum(case$PRIME == "medicare"),
+                                                     big.mark = ","),
+                                              format(sum(case$PRIME == "medicaid/self-pay/other"),
+                                                     big.mark = ","),
+                                              "",
+                                              format(sum(case$Teach == "Teaching"),
+                                                     big.mark = ","),
+                                              format(sum(case$Teach == "Non-Teaching"),
+                                                     big.mark = ","),
+                                              format(sum(case$Teach == "Unknown"),
+                                                     big.mark = ","),
+                                              "",
+                                              format(sum(case$Area == "Urban"),
+                                                     big.mark = ","),
+                                              format(sum(case$Area == "Inner city"),
+                                                     big.mark = ","),
+                                              format(sum(case$Area == "Rural"),
+                                                     big.mark = ","),
+                                              format(sum(case$Area == "Suburb"),
+                                                     big.mark = ","),
+                                              format(sum(case$Area == "Unknown"),
+                                                     big.mark = ","),
+                                              "",
+                                              format(sum(case$CLAB == "Cath Lab"),
+                                                     big.mark = ","),
+                                              format(sum(case$CLAB == "No Cath Lab"),
+                                                     big.mark = ","),
+                                              format(sum(case$CLAB == "Unknown"),
+                                                     big.mark = ","),
+                                              format(nrow(case),
+                                                     big.mark = ",")),
+                     `Percent Patients` = c("",
+                                            round(100*sum(case$SEX == "F")/nrow(case),
+                                                  1),
+                                            "",
+                                            round(100*sum(case$RACE == "White")/nrow(case),
+                                                  1),
+                                            round(100*sum(case$RACE == "Black")/nrow(case),
+                                                  1),
+                                            round(100*sum(case$RACE == "Other")/nrow(case),
+                                                  1),
+                                            "",
+                                            round(100*sum(case$HISPAN == "Hispanic")/nrow(case), 
+                                                  1),
+                                            round(100*sum(case$HISPAN == "Non-Hispanic")/nrow(case), 
+                                                  1),
+                                            round(100*sum(case$HISPAN == "Unknown")/nrow(case), 
+                                                  1),
+                                            "",
+                                            round(100*sum(case$PRIME == "COMMERCIAL")/nrow(case), 
+                                                  1),
+                                            round(100*sum(case$PRIME == "medicare")/nrow(case), 
+                                                  1),
+                                            round(100*sum(case$PRIME == "medicaid/self-pay/other")/nrow(case), 
+                                                  1),
+                                            "",
+                                            round(100*sum(case$Teach == "Teaching")/nrow(case), 
+                                                  1),
+                                            round(100*sum(case$Teach == "Non-Teaching")/nrow(case), 
+                                                  1),
+                                            round(100*sum(case$Teach == "Unknown")/nrow(case), 
+                                                  1),
+                                            "",
+                                            round(100*sum(case$Area == "Urban")/nrow(case), 
+                                                  1), 
+                                            round(100*sum(case$Area == "Inner city")/nrow(case), 
+                                                  1), 
+                                            round(100*sum(case$Area == "Rural")/nrow(case), 
+                                                  1), 
+                                            round(100*sum(case$Area == "Suburb")/nrow(case), 
+                                                  1),
+                                            round(100*sum(case$Area == "Unknown")/nrow(case), 
+                                                  1), 
+                                            "",
+                                            round(100*sum(case$CLAB == "Cath Lab")/nrow(case), 
+                                                  1),
+                                            round(100*sum(case$CLAB == "No Cath Lab")/nrow(case), 
+                                                  1),
+                                            round(100*sum(case$CLAB == "Unknown")/nrow(case), 
+                                                  1),
+                                            ""))
+
+# Save Table1 as CSV
+write.csv(table1,
+          file = "tmp/table1.csv")
+
+datatable(table1,
+          caption = "Table 2: HF pateints' characteristics",
+          rownames = FALSE,
+          class = "cell-border stripe",
+          options = list(searching = TRUE,
+                         pageLength = nrow(table1)))
+```
+
+```{r outcomes_1y}
+case$readm1y <- case$hf1y <- case$dead1y <- case$cvdeath1y <- FALSE
+
+case$readm1y[case$days2readm < 366] <- TRUE
+case$hf1y[case$days2post.hf.dx1 < 366] <- TRUE
+case$dead1y[case$days2death < 366] <- TRUE
+case$cvdeath1y[case$days2cvdeath < 366] <- TRUE
+```
+
+# 1-year outcomes vs. demographics
+```{r demog_glm}
+case$SEX <- factor(case$SEX,
+                   levels = c("M", 
+                              "F"))
+m1a.1y <- glm(readm1y ~ decade +
+                SEX +
+                RACE +
+                HISPAN +
+                PRIME,
+              family = binomial(logit),
+              data = case)
+
+m1b.1y <- glm(hf1y ~ decade +
+                SEX +
+                RACE +
+                HISPAN +
+                PRIME,
+              family = binomial(logit),
+              data = case)
+
+m1c.1y <- glm(dead1y ~ decade +
+                SEX +
+                RACE +
+                HISPAN +
+                PRIME,
+              family = binomial(logit),
+              data = case)
+
+m1d.1y <- glm(cvdeath1y ~ decade +
+                SEX +
+                RACE +
+                HISPAN +
+                PRIME,
+              family = binomial(logit),
+              data = case)
+
+s1 <- list(summary(m1a.1y),
+           summary(m1b.1y),
+           summary(m1c.1y),
+           summary(m1d.1y))
+
+outcomes <- c("All-Cause Readmission",
+              "HF Readmission",
+              "All-Cause Death",
+              "CV Death")
+
+t1 <- list()
+for (i in 1:4) {
+  a <- s1[[i]]
+  out <- data.table(Covariate = c("Age (x10)",
+                                  "Female vs. Male",
+                                  "Race:Black vs. White",
+                                  "Race:Other vs.White",
+                                  "Ethnisity:Non-Hispanic vs. Hispanic",
+                                  "Ethnisity:Unknown vs. Hispanic",
+                                  "Insurance:Commercial vs. Private",
+                                  "Insurance:Medicaid/Self-Pay/Other vs. Private"),
+                    OR = exp(a$coefficients[-1, 1]),
+                    `95% C.I.L.B.` = exp(a$coefficients[-1, 1] - 1.96*a$coefficients[-1, 2]),
+                    `95% C.I.U.B.` = exp(a$coefficients[-1, 1] + 1.96*a$coefficients[-1, 2]),
+                    `p-Value` = ifelse(a$coefficients[-1, 4] >= 0.001,
+                                       round(a$coefficients[-1, 4], 3),
+                                       "<0.001"),
+                    sign = ifelse(a$coefficients[-1, 4] <= 0.05,
+                                  ifelse(a$coefficients[-1, 4] <= 0.01,
+                                         "**",
+                                         "*"), ""))
+  print(datatable(data = out,
+            caption = paste("Table: Logistic Regression Models of 1-year ",
+                            outcomes[i],
+                            " vs. Demographics"),
+            class = "cell-border stripe",
+            rownames = FALSE,
+            options = list(searching = TRUE,
+                           pageLength = nrow(out))) %>%
+    formatRound(columns = 2:4,
+                digits = 3))
+}
 ```
 
 # Length of stay
-```{r length_of_stay, warning=FALSE}
+```{r los, warning=FALSE}
 # Length of stay
 case$los <- as.numeric(difftime(case$DSCHDAT,
                                 case$ADMDAT,
                                 units = "days"))
+sum(case$los == 0)
 
 # Distribution of length of stay
 summary(case$los)
@@ -815,6 +948,58 @@ p2
 ```
 
 **NOTE***: 3,433  patients were discharged at the day of admission. This might include transfers to other hospitals but we did not look at transfers.
+
+```{r los_glm, warning=FALSE}
+m1a.1y <- glm(readm1y ~ los,
+              family = binomial(logit),
+              data = case)
+m1b.1y <- glm(hf1y ~ los,
+              family = binomial(logit),
+              data = case)
+m1c.1y <- glm(dead1y ~ los,
+              family = binomial(logit),
+              data = case)
+m1d.1y <- glm(cvdeath1y ~ los,
+              family = binomial(logit),
+              data = case)
+
+s1 <- list(summary(m1a.1y),
+           summary(m1b.1y),
+           summary(m1c.1y),
+           summary(m1d.1y))
+
+t1 <- list()
+t1 <- lapply(s1, function(a) {
+  out <- data.table(Outcome = "",
+                    OR = exp(a$coefficients[-1, 1]),
+                    `95% C.I.L.B.` = exp(a$coefficients[-1, 1] - 1.96*a$coefficients[-1, 2]),
+                    `95% C.I.U.B.` = exp(a$coefficients[-1, 1] + 1.96*a$coefficients[-1, 2]),
+                    `p-Value` = ifelse(a$coefficients[-1, 4] >= 0.001,
+                                       round(a$coefficients[-1, 4], 3),
+                                       "<0.001"),
+                    sign = ifelse(a$coefficients[-1, 4] <= 0.05,
+                                  ifelse(a$coefficients[-1, 4] <= 0.01,
+                                         "**",
+                                         "*"), ""))
+  rownames(out) <- NULL
+  return(out)
+})
+
+t1 <- do.call("rbind", t1)
+t1$Outcome <- c("All-Cause Readmission",
+                "HF Readmission",
+                "All-Cause Death",
+                "CV Death")
+
+datatable(data = t1,
+          caption = "Logistic Regression Models of 1-year Outcomes vs. LOS (per day)",
+          class = "cell-border stripe",
+          rownames = FALSE,
+          options = list(searching = TRUE,
+                         pageLength = nrow(t1))) %>%
+  formatRound(columns = 2:4,
+              digits = 3)
+```
 
 # Causes of readmission
 ```{r readm_causes}
@@ -939,13 +1124,26 @@ case2$group <- factor(case2$group,
 case2$readm1y <- case2$group != "Not Readmitted"
 ```
 
-```{r reason_for_readm, fig.height = 8, fig.width = 10}
+```{r reason_for_readm, fig.height = 5, fig.width = 7}
 t1yg <- data.table(table(case2$group))
 t1yg$Percent <- round(100*t1yg$N/sum(t1yg$N), 1)
 t1yg$V1 <- factor(t1yg$V1,
-                  levels = rev(t1yg$V1))
+                  levels = c("Not Readmitted",
+                             "Other Reason",
+                             "Cerebrovascular",
+                             "Procedures",
+                             "Hypertension",
+                             "General symptoms",
+                             "Diabetes mellitus",
+                             "AMI",
+                             "Infections",
+                             "Arrhythmia",
+                             "Kidney Disease",
+                             "Heart Disease",
+                             "Respiratory",
+                             "Heart failure"))
 
-p2 <- ggplot(t1yg,
+p1 <- ggplot(t1yg,
              aes(x = V1,
                  y = N,
                  fill = V1)) +
@@ -965,11 +1163,12 @@ p2 <- ggplot(t1yg,
             size = 4,
             position = position_dodge(0.9)) +
   theme(legend.position = "none")
-p2
+p1
 ```
 
 # Distribution of days to readmission within 1 year by reason
 ```{r time_to_readm, fig.height = 8, fig.width = 10}
+summary(case2$days2readm)
 p1 <- ggplot(case2[readm1y == TRUE, ],
              aes(x = days2readm)) +
   facet_wrap(~ group,
@@ -980,7 +1179,9 @@ p1 <- ggplot(case2[readm1y == TRUE, ],
   scale_x_continuous("Days to Readmission",
                      breaks = c(0, 30, 60, 90, 180, 365)) +
   scale_y_continuous("Number of Patients") +
-  theme(axis.text.x = element_text(angle = 90))
+  theme(axis.text.x = element_text(angle = 90,
+                                   hjust = 1,
+                                   vjust = 0.5))
 p1
 ```
 
@@ -1017,9 +1218,6 @@ t2.names <- c("Discharge year",
               # "Hosp Unknown Area vs. Urban",
               "Hosp Non-Teaching vs. Teaching")
 # "Hosp Unknown vs. Teaching")
-
-# Discharge year as numeric
-case$DSCYR <- as.numeric(case$DSCYR)
 
 # Remove patients from hosps with no info
 paste(format(nrow(case[Area == "Unknown", ]),
@@ -2239,14 +2437,15 @@ stts$Reason <- factor(stts$Reason,
                       levels = c("Other Reason",
                                  "Cerebrovascular",
                                  "Procedures",
-                                 "Diabetes mellitus",
+                                 "AMI",
                                  "Hypertension",
+                                 "Diabetes mellitus",
                                  "General symptoms",
                                  "Infections",
                                  "Kidney Disease",
                                  "Arrhythmia",
-                                 "Respiratory",
                                  "Heart Disease",
+                                 "Respiratory",
                                  "Heart failure"))
 
 p1 <- ggplot(stts,
@@ -2291,14 +2490,15 @@ lvls <- c("Not Readmitted",
           "Other Reason",
           "Cerebrovascular",
           "Procedures",
-          "Diabetes mellitus",
+          "AMI",
           "Hypertension",
+          "Diabetes mellitus",
           "General symptoms",
           "Infections",
           "Kidney Disease",
           "Arrhythmia",
-          "Respiratory",
           "Heart Disease",
+          "Respiratory",
           "Heart failure")
 
 case2$group <- factor(case2$group,
